# libzedmd-python-pybind11-extension

./: .gitignore  .gitmodules  CMakeLists.save  CMakeLists.txt  README.md  extending.cpp  extending.py  extending_build  patch.txt
.github/workflows/: github-actions-demo.yml  libzedmd-python-pybind11-extension.yml
